add the bedrooms section
